--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
-PG_HOST=
-PG_PORT=
-PG_USERNAME=
+PG_HOST=localhost
+PG_PORT=5432
+PG_USERNAME=postgres
 PG_PASSWORD=
-PG_DBNAME=
-DOMAIN_NAME=
+PG_DBNAME=URL
+DOMAIN_NAME=localhost:80
